<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@drawable/add_image"
            android:background="@drawable/edit_text"/>

        <EditText
            android:id="@+id/Input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_user_name"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColorHint="@color/gold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_user_email"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColorHint="@color/gold"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_user_phone"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColorHint="@color/gold"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/enter_user"
            android:textColor="@color/darkBlue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
