<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_card"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:backgroundTint="@color/gold"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- صورة ونص فوقها أو بجانبها -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/im"
                tools:ignore="HardcodedText" />

            <!-- النص فوق الصورة -->
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/user_image"
                android:layout_margin="12dp"
                android:background="@drawable/button_style"
                android:backgroundTint="@color/gold"
                android:padding="4dp"
                android:text="@string/user_name"
                android:textColor="@color/darkBlue"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- الإيميل -->
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_example_com"
            android:textColor="@color/darkBlue"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- الهاتف -->
        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_218_91_0000000"
            android:textColor="@color/darkBlue"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- زر حذف -->
        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:background="#F93E3E"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
